--- a/views/home.ejs
+++ b/views/home.ejs
@@ -268,7 +268,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <a href="sendemail">
-                            <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
+                            <img class="hover-shadow cursor" src="/icon/email.png"  style="border-radius: 10px;" alt="Card image cap">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">EMAIL</h5>
@@ -280,7 +280,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <a href="">
-                            <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
+                            <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">PHONE</h5>
@@ -293,7 +293,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <a href="https://www.facebook.com/LeagueStore77">
-                            <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
+                            <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
                         </a>
 
                         <div class="card-body">
@@ -306,7 +306,7 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <a href="https://www.facebook.com/LeagueStore77">
-                            <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
+                            <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
                         </a>
 
                         <div class="card-body">
