--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     /* BASIC */
     
     html {
-        background-color: #56baed;
+        background-color: #FFF;
     }
     
     body {
@@ -47,7 +47,7 @@
         -webkit-border-radius: 10px 10px 10px 10px;
         border-radius: 10px 10px 10px 10px;
         background: #fff;
-        padding: 30px;
+        padding: 15px;
         width: 90%;
         max-width: 450px;
         position: relative;
@@ -213,7 +213,7 @@
     }
     
     .container {
-        margin-top: 100px;
+        margin-top: 10px;
         text-align: center;
         color: rgb(8, 166, 240);
     }
