--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -144,7 +144,6 @@
 
     <%- include ('header'); -%>
     <h2 class="new_product">SẢN PHẨM MỚI</h2>
-
     <div class="container">
       <div class="card-deck">
           <% if(product.length > 0) {%>
@@ -219,7 +218,7 @@
               <div class="col-sm-6">
                   <div class="card">
                       <a href="sendemail">
-                          <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
+                          <img class="hover-shadow cursor" src="/icon/email.png" style="border-radius: 10px;" alt="Card image cap">
                       </a>
                       <div class="card-body">
                           <h5 class="card-title">EMAIL</h5>
@@ -231,7 +230,7 @@
               <div class="col-sm-6">
                   <div class="card">
                       <a href="">
-                          <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
+                          <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
                       </a>
                       <div class="card-body">
                           <h5 class="card-title">PHONE</h5>
@@ -244,7 +243,7 @@
               <div class="col-sm-6">
                   <div class="card">
                       <a href="https://www.facebook.com/LeagueStore77">
-                          <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
+                          <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
                       </a>
 
                       <div class="card-body">
@@ -257,7 +256,7 @@
               <div class="col-sm-6">
                   <div class="card">
                       <a href="https://www.facebook.com/LeagueStore77">
-                          <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
+                          <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
                       </a>
 
                       <div class="card-body">
