--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,6 +143,37 @@
 
     <%- include ('header'); -%>
     <%- include ('slideshow') -%>
+
+    <div class="container" style="margin-top: 25px;" style="align-items: center;">
+        <div class="card-deck">    
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_1_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">FREESHIP đơn hàng từ 500.000đ trở lên</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_2_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">Kiểm tra hàng trước khi thanh toán</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_3_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">Đổi trả trong vòng 7 ngày</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
         
             <h2 class="new_product">SẢN PHẨM MỚI</h2>
 
@@ -284,7 +315,7 @@
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="/sendemail">
-                                    <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
+                                    <img class="hover-shadow cursor" src="/icon/email.png" style="border-radius: 10px;" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">EMAIL</h5>
@@ -296,7 +327,7 @@
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="">
-                                    <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
+                                    <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">PHONE</h5>
@@ -309,7 +340,7 @@
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="https://www.facebook.com/LeagueStore77">
-                                    <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
+                                    <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
                                 </a>
 
                                 <div class="card-body">
@@ -322,7 +353,7 @@
                         <div class="col-sm-6">
                             <div class="card">
                                 <a href="https://www.facebook.com/LeagueStore77">
-                                    <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
+                                    <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
                                 </a>
 
                                 <div class="card-body">
