--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,41 +1,46 @@
+<style>
+    .item img{
+        width: 100%;
+    }
+</style>
 <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/banner/bn1.jpeg">
+            <img src="/banner/bn1.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn2.jpeg">
+            <img src="/banner/bn2.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn3.jpeg">
+            <img src="/banner/bn3.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn4.jpeg">
+            <img src="/banner/bn4.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn5.jpeg">
+            <img src="/banner/bn5.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn6.jpeg">
+            <img src="/banner/bn6.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn7.jpeg">
+            <img src="/banner/bn7.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn8.jpeg">
+            <img src="/banner/bn8.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn9.jpeg">
+            <img src="/banner/bn9.jpeg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn10.jpeg">
+            <img src="/banner/bn10.jpeg" style="width: 100%;">
         </div>
-    </div>
-    <a class="left carousel-control" href="#" role="button" data-slide="prev">
+    </div>  
+    <a class="left carousel-control" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#" role="button" data-slide="next">
+    <a class="right carousel-control" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
@@ -43,6 +48,6 @@
 
 <script>
     $('.carouselIndicators').carousel({
-        interval: 1500
+        interval: 1000
     });
 </script>
