--- a/views/header.ejs
+++ b/views/header.ejs
@@ -153,7 +153,7 @@
                 </li>
 
                 <li>
-                    <a href="/cart" style="color: black; font-weight: 500;">
+                    <a href="/carts" style="color: black; font-weight: 500;">
                         <span class="glyphicon glyphicon-shopping-cart">
                         </span>
                     </a>
