--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,44 +1,59 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-<style>
-    img.hover-shadow {
-        transition: 0.3s;
-    }
-    
-    .hover-shadow:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-</style>
-<footer>
-    <div class="container">
-        <!--three js representation-->
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card">
-                    <a href="https://www.facebook.com/LeagueStore77">
-                        <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
-                    </a>
-
-                    <div class="card-body">
-                        <h5 class="card-title">FACEBOOK</h5>
-                        <p class="card-text">Contact with us via Facebook</p>
-                    </div>
+<div class="container">
+    <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
+</div>
+<div class="container">
+    <!--three js representation-->
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="card">
+                <a href="sendemail">
+                    <img class="hover-shadow cursor" src="/icon/email.png"  style="border-radius: 10px;" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">EMAIL</h5>
+                    <p class="card-text">Contact with us via Email</p>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <a href="https://www.facebook.com/LeagueStore77">
-                        <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
-                    </a>
+        </div>
 
-                    <div class="card-body">
-                        <h5 class="card-title">INSTAGRAM</h5>
-                        <p class="card-text">Contact with us via Instagram</p>
-                    </div>
+        <div class="col-sm-3">
+            <div class="card">
+                <a href="">
+                    <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">PHONE</h5>
+                    <p class="card-text">Phone num: (+84) 0862263986</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-sm-3">
+            <div class="card">
+                <a href="https://www.facebook.com/LeagueStore77">
+                    <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
+                </a>
+
+                <div class="card-body">
+                    <h5 class="card-title">FACEBOOK</h5>
+                    <p class="card-text">Contact with us via Facebook</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card">
+                <a href="https://www.facebook.com/LeagueStore77">
+                    <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
+                </a>
+
+                <div class="card-body">
+                    <h5 class="card-title">INSTAGRAM</h5>
+                    <p class="card-text">Contact with us via Instagram</p>
                 </div>
             </div>
         </div>
     </div>
-</footer>
+</div>
+<p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
