--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,72 +4,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .sidenav {
-                height: 100%;
-                width: 0;
-                position: fixed;
-                z-index: 1;
-                top: 0;
-                left: 0;
-                background-color: #FFF;
-                overflow-x: hidden;
-                transition: 0.5s;
-                padding-top: 60px;
-            }
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #FFF;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
 
-            .sidenav a {
-                padding: 8px 8px 8px 32px;
-                text-decoration: none;
-                font-size: 25px;
-                color: #818181;
-                display: block;
-                transition: 0.3s;
-            }
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
 
-            .sidenav a:hover {
-                color: #f1f1f1;
-            }
+        .sidenav a:hover {
+            color: #f1f1f1;
+        }
 
-            .sidenav .closebtn {
-                position: absolute;
-                top: 0;
-                right: 25px;
-                font-size: 36px;
-                margin-left: 50px;
-            }
+        .sidenav .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
 
-            @media screen and (max-height: 450px) {
-                .sidenav {padding-top: 15px;}
-                .sidenav a {font-size: 18px;}
-            }
+        @media screen and (max-height: 450px) {
+            .sidenav {padding-top: 15px;}
+            .sidenav a {font-size: 18px;}
+        }
 
-            .dropdown{
-                position: absolute;
-                display: inline-block;
-            }
+        .dropdown{
+            position: absolute;
+            display: inline-block;
+        }
 
-            .dropdown-menu a:hover {
-                background-color: #ddd;
-                color: coral;
-            }
+        .dropdown-menu a:hover {
+            background-color: #ddd;
+            color: coral;
+        }
 
-            .dropdown:hover .dropdown-menu {
-                display: block;
-            }
+        .dropdown:hover .dropdown-menu {
+            display: block;
+        }
 
-            .dropdown{
-                font-weight: 500;
-            }
-            .dropdown :hover{
-                color: coral;
-            }
-            .nav navbar-nav {
-                font-weight: 500;
-            }
+        .dropdown{
+            font-weight: 500;
+        }
+        .dropdown :hover{
+            color: coral;
+        }
+        .nav navbar-nav {
+            font-weight: 500;
+        }
 
-            .dropdown .dropdown-menu a:hover{
-                font-weight: 500;
-            }
+        .dropdown .dropdown-menu a:hover{
+            font-weight: 500;
+            color: coral;
+            text-decoration: underline;
+        }
 
+        .navbar-nav a{
+            font-weight: 500;
+            color: black;
+            
+        }
+        .navbar-nav a:hover{
+            color: coral;
+            text-decoration: underline;
+        }
+
+        .dropdown a:hover{
+            color: coral;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -79,42 +95,42 @@
                 <a class="navbar-brand" href="/" style="color: black; font-weight: 800;">LEAGUE STORE 77</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/" style="color: black; font-weight: 500;">TRANG CHỦ</a></li>
+                <li class="active"><a href="/">TRANG CHỦ</a></li>
                 <li>
-                    <a href="/newarrivals" style="color: black; font-weight: 500;">NEW ARRIVAL</a>
+                    <a href="/newarrivals">NEW ARRIVAL</a>
                 </li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">SẢN PHẨM<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" >SẢN PHẨM<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" style="color: black;">QUẦN ÁO</a></li>
-                        <li><a href="#" style="color: black;">QUẦN ÁO THỂ THAO</a></li>
-                        <li><a href="#" style="color: black;">PHỤ KIỆN</a></li>
+                        <li><a href="#" >QUẦN ÁO</a></li>
+                        <li><a href="#" >QUẦN ÁO THỂ THAO</a></li>
+                        <li><a href="#" >PHỤ KIỆN</a></li>
                     </ul>
                 </li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">BỘ SƯU TẬP<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">BỘ SƯU TẬP<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" style="color: black;">HÈ</a></li>
-                        <li><a href="#" style="color: black;">THU ĐÔNG</a></li>
-                        <li><a href="#" style="color: black;">PHỤ KIỆN</a></li>
-                    </ul>
-                </li>
-    
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">GIẢI ĐẤU<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" style="color: black;">NGOẠI HẠNG ANH</a></li>
-                        <li><a href="#" style="color: black;">LA LIGA</a></li>
-                        <li><a href="#" style="color: black;">BUNDES LIGA</a></li>
-                        <li><a href="#" style="color: black;">LEAGUE 1</a></li>
-                        <li><a href="#" style="color: black;">SERI A</a></li>
-                        <li><a href="#" style="color: black;">WORLD CUP</a></li>
-                        <li><a href="#" style="color: black;">UEFA CHAMPIONS LEAGUE</a></li>
-                        <li><a href="#" style="color: black;">UEFA EUROPA LEAGUE</a></li>
-                        <li><a href="#" style="color: black;">EURO</a></li>
+                        <li><a href="#" >HÈ</a></li>
+                        <li><a href="#" >THU ĐÔNG</a></li>
+                        <li><a href="#" >PHỤ KIỆN</a></li>
                     </ul>
                 </li>
     
-                <li><a href="/contact" style="color: black; font-weight: 500;">LIÊN HỆ</a></li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">GIẢI ĐẤU<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >NGOẠI HẠNG ANH</a></li>
+                        <li><a href="#" >LA LIGA</a></li>
+                        <li><a href="#" >BUNDES LIGA</a></li>
+                        <li><a href="#" >LEAGUE 1</a></li>
+                        <li><a href="#" >SERI A</a></li>
+                        <li><a href="#" >WORLD CUP</a></li>
+                        <li><a href="#" >UEFA CHAMPIONS LEAGUE</a></li>
+                        <li><a href="#" >UEFA EUROPA LEAGUE</a></li>
+                        <li><a href="#" >EURO</a></li>
+                    </ul>
+                </li>
     
-                <li><a href="/news" style="color: black; font-weight: 500;">NEWS</a></li>
+                <li><a class="contact" href="/contact">LIÊN HỆ</a></li>
+    
+                <li><a class="news" href="/news">NEWS</a></li>
     
                 <% if(user !== "Login") {%>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">QUẢN LÝ<span class="caret"></span></a>
