--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -22,20 +22,14 @@
             <section class="mb-5">
                 <div class="row">
                     <div class="col-md-6 mb-4 mb-md-0">
-
                         <div id="mdb-lightbox-ui"></div>
-
                         <div class="mdb-lightbox">
-
                             <div class="row product-gallery mx-1">
-
                                 <div class="col-12 mb-0">
                                     <figure class="view overlay rounded z-depth-1 main-img">
-                                        <a href=<%=product.image%>
-                            width="550" height="600">
-                            <img src="/products/<%= product.image%>"
-                                class="img-fluid z-depth-1" width="550" height="600">
-                            </a>
+                                        <a width="550" height="600">
+                                            <img src="/products/<%= product.image%>" class="img-fluid z-depth-1" width="550" height="600">
+                                        </a>
                                     </figure>
                                 </div>
                             </div>
@@ -105,5 +99,4 @@
         </form>
     </div>
 </body>
-
 </html>
