--- a/views/header.ejs
+++ b/views/header.ejs
@@ -57,23 +57,23 @@
         }
 
         .dropdown{
-            font-weight: 500;
+            font-weight: bold;
         }
         .dropdown :hover{
             color: coral;
         }
         .nav navbar-nav {
-            font-weight: 500;
+            font-weight: bold;
         }
 
         .dropdown .dropdown-menu a:hover{
-            font-weight: 500;
+            font-weight: bold;
             color: coral;
             text-decoration: underline;
         }
 
         .navbar-nav a{
-            font-weight: 500;
+            font-weight: bold;
             color: black;
             
         }
