--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,11 +20,29 @@
         @media screen and (max-height: 450px) {}
         
         .new_product {
+            font-weight: bold;
             text-align: center;
+        }
+        .new_product > a{
+            font-weight: bold;
+            color: black;
+        }
+        .new_product:hover a{
+            color: coral;
         }
         
         .populate_product {
             text-align: center;
+            font-weight: bold;
+        }
+
+        .populate_product > a{
+            font-weight: bold;
+            color: black;
+        }
+
+        .populate_product:hover a{
+            color: coral;
         }
         
         footer {
@@ -153,7 +171,40 @@
     <%- include ('header'); -%>
     <%- include ('slideshow'); -%>
 
-    <h2 class="new_product">SẢN PHẨM MỚI</h2>
+    <div class="container" style="margin-top: 25px;">
+        <div class="card-deck">    
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px; align-items: center;">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_1_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">FREESHIP đơn hàng từ 500.000đ trở lên</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px; align-items: center;">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_2_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">Kiểm tra hàng trước khi thanh toán</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4" style="margin-bottom:15px; align-items: center;">
+                <div class="banner-footer-item-image">
+                    <img src="//theme.hstatic.net/1000253775/1000799526/14/info_img_3_home.png?v=431" style="width: 45px; height: 45px;">
+                </div>
+                <div class="banner-footer-item-info">
+                    <p class="banner-footer-item-title">Đổi trả trong vòng 7 ngày</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <h2 class="new_product">
+        <a href="/newarrivals">SẢN PHẨM MỚI</a>
+    </h2>
 
     <div class="container">
         <div class="card-deck">
@@ -216,7 +267,9 @@
         </nav>
     </div>
 
-    <h2 class="populate_product">SẢN PHẨM BÁN CHẠY</h2>
+    <h2 class="populate_product">
+        <a href="/newarrivals"> SẢN PHẨM BÁN CHẠY </a>
+    </h2>
 
     <div class="container">
         <div class="card-deck">
