--- a/views/header.ejs
+++ b/views/header.ejs
@@ -113,6 +113,16 @@
                         <li><a href="#" >PHỤ KIỆN</a></li>
                     </ul>
                 </li>
+
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CHÍNH SÁCH - HƯỚNG DẪN<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >HƯỚNG DẪN CHỌN SIZE</a></li>
+                        <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
+                        <li><a href="#" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
+                        <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
+                    </ul>
+                </li>
+
     
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">GIẢI ĐẤU<span class="caret"></span></a>
                     <ul class="dropdown-menu">
