--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -32,7 +32,7 @@
         footer {
             text-align: center;
             padding: 3px;
-            background-color: #333;
+            background-color: #111;
             color: white;
             bottom: 0rem;
             position: relative;
@@ -209,65 +209,7 @@
   <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 
   <footer>
-      <div class="container">
-          <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
-      </div>
-      <div class="container">
-          <!--three js representation-->
-          <div class="row">
-              <div class="col-sm-6">
-                  <div class="card">
-                      <a href="sendemail">
-                          <img class="hover-shadow cursor" src="/icon/email.png" style="border-radius: 10px;" alt="Card image cap">
-                      </a>
-                      <div class="card-body">
-                          <h5 class="card-title">EMAIL</h5>
-                          <p class="card-text">Contact with us via Email</p>
-                      </div>
-                  </div>
-              </div>
-
-              <div class="col-sm-6">
-                  <div class="card">
-                      <a href="">
-                          <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
-                      </a>
-                      <div class="card-body">
-                          <h5 class="card-title">PHONE</h5>
-                          <p class="card-text">Phone num: (+84) 0862263986</p>
-                      </div>
-                  </div>
-              </div>
-
-
-              <div class="col-sm-6">
-                  <div class="card">
-                      <a href="https://www.facebook.com/LeagueStore77">
-                          <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
-                      </a>
-
-                      <div class="card-body">
-                          <h5 class="card-title">FACEBOOK</h5>
-                          <p class="card-text">Contact with us via Facebook</p>
-                      </div>
-                  </div>
-              </div>
-
-              <div class="col-sm-6">
-                  <div class="card">
-                      <a href="https://www.facebook.com/LeagueStore77">
-                          <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
-                      </a>
-
-                      <div class="card-body">
-                          <h5 class="card-title">INSTAGRAM</h5>
-                          <p class="card-text">Contact with us via Instagram</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
+      <%- include('footer') -%>
   </footer>
 </body>
 
