--- a/views/header.ejs
+++ b/views/header.ejs
@@ -182,6 +182,9 @@
                     <a href="/carts" style="color: black; font-weight: 500;">
                         <span class="glyphicon glyphicon-shopping-cart">
                         </span>
+                        <span>
+                            0
+                        </span>
                     </a>
                 </li>
 
