--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <%- include('header') -%>
     <div style="text-align: center;" class="container">
         <h2>CHI TIẾT SẢN PHẨM</h2>
     </div>
@@ -91,7 +92,7 @@
                         </p>
                         <textarea type="textarea" id="editProductDescription" name="description" class="form-control" cols="92" rows="5" tabindex="101" placeholder="Mô tả"></textarea><br>
                         <button type="submit" class="btn btn-primary btn-md mr-1 mb-2">Đặt mua ngay</button>
-                        <a href="" class="btn btn-warning btn-md mr-1 mb-2"><i
+                        <a href="/carts/add-to-cart/<%= product._id %>" class="btn btn-warning btn-md mr-1 mb-2"><i
                         class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</a>
                     </div>
                 </div>
