--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -16,7 +16,7 @@
 <body>
     <%- include('header') -%>
     <div style="text-align: center;" class="container">
-        <h2>CHI TIẾT SẢN PHẨM</h2>
+        <h2 style="text-decoration: underline;">CHI TIẾT SẢN PHẨM</h2>
     </div>
     <div class="container">
         <form method="POST" action="/buynow/<%= product._id %>">
@@ -60,44 +60,77 @@
                                     <tr>
                                         <td class="pl-0">
                                             <div class="def-number-input number-input safari_only mb-0">
-                                                <input class="quantity" min="0" name="quantity" value="1" type="number">
+                                                <input id="qty" type="number" class="quantity" min="0" name="quantity" value="1">
                                             </div>
                                         </td>
                                         <td>
-                                            <div class="mt-1">
-                                                <div class="form-check form-check-inline pl-0">
-                                                    <input type="checkbox" class="form-check-input" id="small" name="radSizeS">
-                                                    <label class="form-check-label small text-uppercase card-link-secondary" for="small">S</label>
-                                                </div>
-                                                <div class="form-check form-check-inline pl-0">
-                                                    <input type="checkbox" class="form-check-input" id="medium" name="radSizeL" checked>
-                                                    <label class="form-check-label small text-uppercase card-link-secondary" for="medium">L</label>
-                                                </div>
-                                                <div class="form-check form-check-inline pl-0">
-                                                    <input type="checkbox" class="form-check-input" id="large" name="radSizeXL">
-                                                    <label class="form-check-label small text-uppercase card-link-secondary" for="large">XL</label>
-                                                </div>
-                                                <div class="form-check form-check-inline pl-0">
-                                                    <input type="checkbox" class="form-check-input" id="extralarge" name="radSizeXXL">
-                                                    <label class="form-check-label small text-uppercase card-link-secondary" for="extralarge">XXL</label>
-                                                </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="small" name="radSize" value="S">
+                                                <label class="form-check-label" for="small">S</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="medium" name="radSize" value="M">
+                                                <label class="form-check-label" for="medium">M</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="large" name="radSize" value="L" checked>
+                                                <label class="form-check-label" for="large">L</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="xlarge" name="radSize" value="XL">
+                                                <label class="form-check-label" for="xlarge">XL</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="extralarge" name="radSize" value="XXL">
+                                                <label class="form-check-label" for="extralarge">XXL</label>
                                             </div>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
+                        <a href="/guide.choosesize" class="btn btn-primary btn-md mr-1 mb-2">Size choose guide</a><br>
                         <p>
                             Để lại tin nhắn cho chúng tôi: (trong trường hợp mà bạn chọn nhiều size)
                         </p>
-                        <textarea type="textarea" id="editProductDescription" name="description" class="form-control" cols="92" rows="5" tabindex="101" placeholder="Mô tả"></textarea><br>
+                        <textarea type="textarea" id="repMsg" name="msg" class="form-control" cols="92" rows="5" tabindex="101" placeholder="Mô tả"></textarea><br>
                         <button type="submit" class="btn btn-primary btn-md mr-1 mb-2">Đặt mua ngay</button>
-                        <a href="/carts/add-to-cart/<%= product._id %>" class="btn btn-warning btn-md mr-1 mb-2"><i
-                        class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</a>
+                        <a href="" class="btn btn-warning btn-md mr-1 mb-2" id="addtocart">
+                        <i class="fas fa-shopping-cart pr-2"></i>Thêm vào giỏ hàng</a>
                     </div>
                 </div>
             </section>
         </form>
     </div>
+    <script>
+        window.addEventListener("load", () => {
+            $('#addtocart').click( function(e) {
+                e.preventDefault();
+                var href = $(this).attr("href");
+                href ='/carts/add-to-cart/<%= product._id %>/';
+                var size = document.querySelector('input[name="radSize"]:checked').value.toString();
+               
+                size += '/';
+                href += size;
+
+                var msg = document.getElementById('repMsg').value.toString();
+                if(msg === ""){
+                    msg = "Vui lòng để lại tin nhắn";
+                }
+               
+                msg += '/';                                       
+                href += msg;
+
+                var qt = document.getElementById('qty').value.toString();
+
+                qt += '/';
+                href += qt;
+
+                window.location.href = href;
+
+                return false; 
+            });
+        });
+    </script>
 </body>
 </html>
