--- a/views/carts.ejs
+++ b/views/carts.ejs
@@ -21,6 +21,7 @@
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col">Tên sản phẩm</th>
+                            <th scope="col">Size</th>
                             <th scope="col">Chỉnh sửa</th>
                             <th scope="col">Số lượng</th>
                             <th scope="col">Tin nhắn</th>
@@ -33,6 +34,9 @@
                             <tr>
                                 <td>
                                     <strong><%= product.item.name %></strong>
+                                </td>
+                                <td>
+                                    <strong><%= product.size %></strong>
                                 </td>
                                 <td>
                                     <div class="btn-group">
