--- a/views/home.ejs
+++ b/views/home.ejs
@@ -208,7 +208,7 @@
 
     <div class="container">
         <div class="card-deck">
-            <% if(product.length > 0) {%>
+            <% if(product) {%>
                 <%for(var i=0; i<product.length;i++) { %>
                     <div class="col-sm-12 col-lg-4">
                         <div class="card h-100">
@@ -273,7 +273,7 @@
 
     <div class="container">
         <div class="card-deck">
-            <% if(product.length > 0) {%>
+            <% if(product) {%>
                 <%for(var i=0; i<product.length;i++) { %>
                     <div class="col-sm-12 col-lg-4">
                         <div class="card h-100">
